pkg/kgateway/agentgatewaysyncer/testdata/outputs/trafficpolicy/extauth-route.yaml
Addresses:
- service:
    hostname: example-svc.default.svc.cluster.local
    name: example-svc
    namespace: default
    ports:
    - servicePort: 80
- service:
    hostname: ext-authz.default.svc.cluster.local
    name: ext-authz
    namespace: default
    ports:
    - appProtocol: HTTP2
      servicePort: 4444
      targetPort: 9000
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  key: default/example-gateway.http
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: http
  protocol: HTTP
Policies:
- key: traffic/default/secure-route-policy:extauth:default/example-route
  name:
    kind: AgentgatewayPolicy
    name: secure-route-policy
    namespace: default
  target:
    route:
      name: example-route
      namespace: default
  traffic:
    extAuthz:
      grpc: {}
      target:
        port: 4444
        service:
          hostname: ext-authz.default.svc.cluster.local
          namespace: default
Routes:
- backends:
  - backend:
      port: 80
      service:
        hostname: example-svc.default.svc.cluster.local
        namespace: default
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  name:
    kind: HTTPRoute
    name: example-route
    namespace: default
