pkg/kgateway/agentgatewaysyncer/testdata/outputs/trafficpolicy/extproc-listener.yaml
Addresses:
- service:
    hostname: example-svc.default.svc.cluster.local
    name: example-svc
    namespace: default
    ports:
    - servicePort: 80
- service:
    hostname: extproc-svc.default.svc.cluster.local
    name: extproc-svc
    namespace: default
    ports:
    - appProtocol: HTTP2
      servicePort: 4444
      targetPort: 9000
Binds:
- key: 80/default/example-gateway
  port: 80
- key: 90/default/example-gateway
  port: 90
Listeners:
- bindKey: 90/default/example-gateway
  gatewayName: default/example-gateway
  key: default/example-gateway.bar
  name: bar
  protocol: HTTP
- bindKey: 80/default/example-gateway
  gatewayName: default/example-gateway
  key: default/example-gateway.foo
  name: foo
  protocol: HTTP
Policies:
- name: traffic/default/example-policy:extproc:default/example-gateway.foo
  target:
    listener: default/example-gateway.foo
  traffic:
    extProc:
      target:
        port: 4444
        service: default/extproc-svc.default.svc.cluster.local
Routes:
- backends:
  - backend:
      port: 80
      service: default/example-svc.default.svc.cluster.local
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.bar
  listenerKey: default/example-gateway.bar
  routeName: default/example-route
- backends:
  - backend:
      port: 80
      service: default/example-svc.default.svc.cluster.local
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.foo
  listenerKey: default/example-gateway.foo
  routeName: default/example-route
