pkg/kgateway/agentgatewaysyncer/testdata/outputs/trafficpolicy/extproc-route.yaml
Addresses:
- service:
    hostname: example-svc.default.svc.cluster.local
    name: example-svc
    namespace: default
    ports:
    - servicePort: 80
- service:
    hostname: extproc-svc.default.svc.cluster.local
    name: extproc-svc
    namespace: default
    ports:
    - appProtocol: HTTP2
      servicePort: 4444
      targetPort: 9000
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  gatewayName: default/example-gateway
  key: default/example-gateway.http
  name: http
  protocol: HTTP
Policies:
- name: traffic/default/example-policy:extproc:default/example-route
  target:
    route: default/example-route
  traffic:
    extProc:
      target:
        port: 4444
        service: default/extproc-svc.default.svc.cluster.local
Routes:
- backends:
  - backend:
      port: 80
      service: default/example-svc.default.svc.cluster.local
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  routeName: default/example-route
