pkg/kgateway/agentgatewaysyncer/testdata/outputs/trafficpolicy/global-rl-request-gw.yaml
Addresses:
- service:
    hostname: example-svc.default.svc.cluster.local
    name: example-svc
    namespace: default
    ports:
    - servicePort: 80
- service:
    hostname: rl-svc.default.svc.cluster.local
    name: rl-svc
    namespace: default
    ports:
    - appProtocol: HTTP2
      servicePort: 4444
      targetPort: 9000
Binds:
- key: 80/default/example-gateway
  port: 80
Listeners:
- bindKey: 80/default/example-gateway
  key: default/example-gateway.http
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: http
  protocol: HTTP
Policies:
- key: traffic/default/example-policy:rl-global:default/example-gateway
  name:
    kind: AgentgatewayPolicy
    name: example-policy
    namespace: default
  target:
    gateway:
      name: example-gateway
      namespace: default
  traffic:
    remoteRateLimit:
      descriptors:
      - entries:
        - key: user-agent
          value: request.headers["user-agent"]
      domain: api-gateway
      target:
        port: 4444
        service: default/rl-svc.default.svc.cluster.local
Routes:
- backends:
  - backend:
      port: 80
      service: default/example-svc.default.svc.cluster.local
    weight: 1
  hostnames:
  - example.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  name:
    kind: HTTPRoute
    name: example-route
    namespace: default
