pkg/kgateway/agentgatewaysyncer/testdata/outputs/trafficpolicy/transformation.yaml
Addresses:
- service:
    hostname: simple-svc.default.svc.cluster.local
    name: simple-svc
    namespace: default
    ports:
    - appProtocol: HTTP11
      servicePort: 8080
      targetPort: 3000
Binds:
- key: 8080/default/example-gateway
  port: 8080
Listeners:
- bindKey: 8080/default/example-gateway
  key: default/example-gateway.http
  name:
    gatewayName: example-gateway
    gatewayNamespace: default
    listenerName: http
  protocol: HTTP
Policies:
- key: traffic/default/example-traffic-policy-for-gateway-attached-transform:transformation:default/example-gateway
  name:
    kind: AgentgatewayPolicy
    name: example-traffic-policy-for-gateway-attached-transform
    namespace: default
  target:
    gateway:
      name: example-gateway
      namespace: default
  traffic:
    transformation:
      request:
        set:
        - expression: '''hello'''
          name: request-gateway
      response:
        set:
        - expression: '''goodbye'''
          name: response-gateway
Routes:
- backends:
  - backend:
      port: 8080
      service:
        hostname: simple-svc.default.svc.cluster.local
        namespace: default
    weight: 1
  hostnames:
  - example-gateway-attached-transform.com
  key: default/example-route.0.0.http
  listenerKey: default/example-gateway.http
  name:
    kind: HTTPRoute
    name: example-route
    namespace: default
